Atualizações do Angular que é provisório ainda, usado para teste, E criação de uma documentação de API ainda faltando alguns detalhes!

--- a/RHSystem.Front/rh-system/src/app/home/login/user-login/user-login.component.css
+++ b/RHSystem.Front/rh-system/src/app/home/login/user-login/user-login.component.css
@@ -3,7 +3,7 @@
 }
 
 label  {
-    color: white;
+    color: black;
 }
 .fa-exclamation {
     color: red;
@@ -15,8 +15,8 @@ label  {
 .body {                
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/assets/images/background-login.jpg");     
+    background-size: cover;    
+    background-color: white;
     height: 100vh;
 }
 
