--- a/RHSystem.Front/rh-system/src/app/core/header/header.component.html
+++ b/RHSystem.Front/rh-system/src/app/core/header/header.component.html
@@ -15,7 +15,7 @@
         </div>
         <ng-template #login>
             <span class="navbar-text">
-                <a [routerLink]="['']" class="text-light">
+                <a [routerLink]="['/home']" class="text-light">
                     Por favor, realize o login!
                 </a>
             </span>
