--- a/RHSystem.Front/rh-system/src/app/home/login/user-form/user-form.component.css
+++ b/RHSystem.Front/rh-system/src/app/home/login/user-form/user-form.component.css
@@ -1,3 +1,7 @@
+label  {
+    color: black;
+}
+
 .fa-exclamation {
     color: red;
 }
@@ -5,11 +9,7 @@
 .body {                
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/assets/images/background-login.jpg");     
+    background-size: cover;    
+    background-color: white;
     height: 100vh;
-}
-
-label  {
-    color: white;
 }
